# WPRNativeBuild

./: .gitmodules  build.bat
Source/: .gitignore  CMakeLists.txt
